# EUDIS_Hackathon_Team_DEL

./: .gitignore  README.md  all_chunks.json  api.py  docker-compose.yml  getScrapFile.py  main.ipynb  pyproject.toml
llm/: Dockerfile  pyproject.toml
src/: Embeddings.py  config.py  database.ini  docker-compose.yaml  download_data.sh
