[tool.poetry]
name = "eudis-team-del"
version = "0.1.0"
description = ""
authors = ["DamianKobylinski <damiankob12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
bs4 = "^0.0.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
