[tool.poetry]
name = "eudis_hackathon_team_del"
version = "0.1.0"
description = ""
authors = ["Kleczyk <mailnasyff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
pydantic = "^2.7.2"
chromadb = "^0.5.0"
llama-index = "^0.10.42"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
